--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Expense Tracker using React Context API & TypeScript" />
   <link rel="apple-touch-icon" href="./logo.png" />
-  <link rel="icon" href="./logo.png" />
+  <link rel="icon" type="image/png" href="./favicon.png" />
+  <link rel="icon" type="image/x-icon" href="./favicon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
